--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
         <br>
         <br>
         <input type="submit" value="Reverse!">
+        <p>Something</p>
     </form>
 </body>
 </html>
