--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1> Initial Text </h1>
+<h1>Original text has {{countofwords}} words</h1>
 {{usertext}}
-<h1> Reversed Text </h1>
+<h1> Reversed text </h1>
 {{reversedtext}}
 
 </body>
